<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Celtic Explorer Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_decision_tree">DecisionTreeActivity</string>
    <string name="cameraTitle">Camera</string>
    <string name="gpsTitle">GPS</string>
    <string name="latTitle">Latitude:</string>
    <string name="longTitle">Longitude:</string>
    <string name="takePhotoBtnTxt">Take Photo</string>
    <string name="btnNextTxt">Next</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="btnSaveTxt">Save</string>
    <string name="btnAdd">Add</string>
    <string name="btnDelete">Delete</string>
    <string name="lblDelete">Enter node ID to delete:</string>


</resources>
