<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#BCED91" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgCamera"
        android:minHeight="300dp"
        android:minWidth="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/longTitle"
        android:id="@+id/txtLongitude"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/imgCamera"
        android:layout_alignEnd="@+id/txtCamera" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/latTitle"
        android:id="@+id/txtLatitude"
        android:layout_below="@+id/txtLongitude"
        android:layout_alignStart="@+id/txtLongitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cameraTitle"
        android:id="@+id/txtCamera"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gpsTitle"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignTop="@+id/txtLongitude"
        android:layout_alignStart="@+id/imgCamera" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takePhotoBtnTxt"
        android:id="@+id/btnTakePhoto"
        android:onClick="onTakePhoto"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveTxt"
        android:id="@+id/btnNext"
        android:onClick="onSavePhoto"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnTakePhoto" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNextTxt"
        android:id="@+id/btnNextTxt"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/txtCamera"
        android:onClick="onNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblLongitudeValue"
        android:layout_alignBottom="@+id/txtLongitude"
        android:layout_toEndOf="@+id/txtLongitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblLatitudeValue"
        android:layout_alignBaseline="@+id/txtLatitude"
        android:layout_alignBottom="@+id/txtLatitude"
        android:layout_toEndOf="@+id/txtLatitude" />
</RelativeLayout>
